--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "ajv-formats": "^2.1.1",
     "axios": "^1.6.2",
     "decimal.js": "^10.4.3",
+    "delay": "^6.0.0",
     "eslint": "^8.54.0",
     "ethers": "^5.7.2",
     "husky": "^8.0.3",
@@ -44,6 +45,7 @@
     "nodemon": "^3.0.1",
     "npm-run-all": "^4.1.5",
     "openai": "^4.14.0",
+    "p-retry": "^6.2.0",
     "prettier": "^3.1.0",
     "probot": "^12.3.3",
     "tsx": "^4.7.1",
@@ -52,7 +54,9 @@
     "zlib": "^1.0.5"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.23.9",
+    "@babel/core": "^7.24.4",
+    "@babel/plugin-transform-runtime": "^7.24.3",
+    "@babel/preset-env": "^7.24.4",
     "@babel/preset-typescript": "^7.23.3",
     "@types/jest": "^29.5.12",
     "@types/jsdom": "^21.1.6",
@@ -61,8 +65,10 @@
     "@types/markdown-it": "^13.0.7",
     "@types/node": "^20.8.9",
     "@types/pino-std-serializers": "^4.0.0",
+    "babel-jest": "^29.7.0",
     "cspell": "^8.1.3",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.2"
   },
   "lint-staged": {
     "*.ts": [
