--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "p-retry": "^6.2.0",
     "prettier": "^3.1.0",
     "probot": "^12.3.3",
+    "ts-retry": "^4.2.5",
     "tsx": "^4.7.1",
     "typescript": "^5.2.2",
     "yaml": "^2.3.3",
